# design_pattern

./: .gitignore  LICENSE  README.md
decorator_pattern/: CMakeLists.txt  main.cpp
decorator_pattern/Addons/: CMakeLists.txt  Caramel.h  Chocolate.h  IAddonDecorator.h
decorator_pattern/Beverage/: CMakeLists.txt  Espresso.h  IBeverage.h
factory_method_pattern/: CMakeLists.txt  main.cpp
factory_method_pattern/Animal/: Animal.h  CMakeLists.txt  Cat.h  Dog.h  Duck.h
factory_method_pattern/AnimalFactory/: BalancedAnimalFactory.h  CMakeLists.txt  IAnimalFactory.h  RandomAnimalFactory.h
observer_pattern/: CMakeLists.txt  main.cpp
observer_pattern/Observable/: CMakeLists.txt  IObservable.h  WeatherStation.h
observer_pattern/Observer/: CMakeLists.txt  CityDisplay.h  IObserver.h  PhoneDisplay.h
strategy_pattern/: CMakeLists.txt  Duck.h  main.cpp
strategy_pattern/DisplayBehavior/: CMakeLists.txt  DisplayAsText.cpp  DisplayAsText.h  IDisplayBehavior.h
strategy_pattern/FlyBehavior/: CMakeLists.txt  IFlyBehavior.h  NoFly.cpp  NoFly.h  SimpleFly.cpp  SimpleFly.h  SuperFly.cpp  SuperFly.h
strategy_pattern/QuackBehavior/: CMakeLists.txt  IQuackBehavior.h  NoQuack.cpp  NoQuack.h  SimpleQuack.cpp  SimpleQuack.h
